additional checks for problems with server connection
both repository and login dialog check if server is responding and tell so if not.
repository update manager also checks if server responds before updating, and
returns more verbose error messages on failure.

--- a/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_en.properties
+++ b/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_en.properties
@@ -138,6 +138,7 @@ Handler_backup_error=An Error occured while trying to write a local backup of al
 Handler_backup_error_title=Backup was not succesfull
 Handler_backup_config_error=An Error occured while trying to write a local backup of classification configurations.
 Command_update_error=Update unsuccessfull
+Command_update_error_server=Update failed. No Connection to Remote Server\!
 Command_update_error_invalid_url=No valid Repository URL found.
 Command_update_successful=Update successfull
 Command_number_of_persons=Number of persons currently stored in the local database
@@ -247,6 +248,7 @@ LoginDialog_userName=User name
 Dialog_add_ref_crit=Add Reference Criteria
 Dialog_message_password_no_whitespace=Password may not contain whitespace
 LoginDialog_errorMessageNoUserName=Please enter your user name\!
+LoginDialog_errorMessageNoConnection=Repository server does not respond\!
 Dialog_operand=Op.
 Dialog_filter_deselect_all=Deselect All
 Dialog_message_select_semantic_filter=Select Category to Include.
