repo update: internationalization of status messages

--- a/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_de.properties
+++ b/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_de.properties
@@ -138,10 +138,14 @@ Commandsr_guest_user_denied=Sie sind als Gast eingelogt und d\u00FCrfen daher we
 Handler_backup_error=Beim Versuch eine lokale Datensicherung der Datenbank zu erstellen ist ein Fehler aufgetreten.
 Handler_backup_error_title=Datensicherung nicht erfolgreich
 Handler_backup_config_error=Beim Versuch eine lokale Datensicherung der Klassifikationen zu erstellen ist ein Fehler aufgetreten.
+Command_update_successful=Update erfolgreich
 Command_update_error=Update nicht erfolgreich
 Command_update_error_invalid_url=Es wurde keine g\u00FCltige Repositoriums-URL gefunden.
-Command_update_successful=Update erfolgreich
+Command_update_error_server=Update-Fehler\: Verbindung zum Server konnte nicht hergestellt werden\!
 Command_number_of_persons=Anzahl der Personen in der Datenbank
+Command_update_status_ok=Update verlief ohne Probleme.
+Command_update_status_warn=Warnmeldungen w\u00E4hrend des Updates\!
+Command_update_status_error=Beim Update sind Fehler aufgetreten\!
 Command_empty_db_requiered=Sie m\u00FCssen die Datenbank leeren und alle Daten l\u00F6schen, bevor sie die Repositoriums-Verbindung ver\u00E4ndern k\u00F6nnen.
 Command_modify_repository_connection=Repositoriums-Verbindung \u00E4ndern
 Command_backup_and_empty=Datensichern und Datenbank leeren
@@ -152,6 +156,9 @@ Handler_empty_db_warning=Alle Daten l\u00F6schen und Datenbank leeren.
 Handler_empty_db_warning2=Wenn Sie diesen Dialog best\u00E4tigen, wird zuerst eine lokale Datensicherung erstellt, bevor die Daten gel\u00F6scht werden.
 Handler_empty_db_title=Datenbank leeren
 
+Conflict_keep_remote=Server-Version uebernehmen
+Conflict_resolve_later=Ueberspringen
+Conflict_keep_local=Lokale Version uebernehmen
 
 ####################### control ########################################
 Orderer_uncategorized=Ohne Zuordnung
@@ -815,7 +822,7 @@ View_action_only_upated_objects=Nur aktualisierte Objekte
 View_action_only_person_identifier=Nur Personen mit Identifizierer
 View_similar_person=\u00E4hnliche Person
 View_group_references_tooltip=Quellen nach dem gew\u00E4hlten Kriterium gruppieren
-View_lb_user=\ Benutzer\: 
+View_lb_user=\nBenutzer\: 
 View_group_title=Titel
 View_action_only_person_viaf=Nur Personen ohne VIAF
 CategoryView_messageTaggingBRName=Markup Element\: 
