--- a/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_en.properties
+++ b/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_en.properties
@@ -137,10 +137,13 @@ Commandsr_guest_user_denied=You have logged in as Guest which means that you may
 Handler_backup_error=An Error occured while trying to write a local backup of all data
 Handler_backup_error_title=Backup was not succesfull
 Handler_backup_config_error=An Error occured while trying to write a local backup of classification configurations.
-Command_update_error=Update unsuccessfull
+Command_update_successful=Update successful
+Command_update_error=Errors during update\!
 Command_update_error_server=Update failed. No Connection to Remote Server\!
-Command_update_error_invalid_url=No valid Repository URL found.
-Command_update_successful=Update successfull
+Command_update_error_invalid_url=No valid Repository URL found\!
+Command_update_status_ok=Update went without problems.
+Command_update_status_warn=Update encountered warnings\!
+Command_update_status_error=Update encountered one or more errors\!
 Command_number_of_persons=Number of persons currently stored in the local database
 Command_empty_db_requiered=You have to create an empty Database before you can modify your Repository connection.
 Command_modify_repository_connection=Modify Repository Connection
@@ -151,6 +154,10 @@ Handler_empty_db_error_title=Creation was not succesfull
 Handler_empty_db_warning=Delete all Data from DB and create a clean empty Database
 Handler_empty_db_warning2=If you click YES you will first write a local backup of all data currently stored in your Database.
 Handler_empty_db_title=Create Empty Database
+
+Conflict_keep_remote=Keep remote version
+Conflict_resolve_later=Resolve later
+Conflict_keep_local=Keep local version
 
 ########################### control #################################
 Orderer_uncategorized=uncategorized
@@ -796,7 +803,7 @@ View_action_only_upated_objects=Only Updated Objects
 View_action_only_person_identifier=Only Persons with Identifiers
 View_similar_person=Similar Person
 View_group_references_tooltip=Order Aspects by Selected Order
-View_lb_user=\\nUser\: 
+View_lb_user=\nUser\: 
 View_group_title=Title
 View_action_only_person_viaf=Only Persons without VIAF
 CategoryView_messageTaggingBRName=Markup Element\: 
