--- a/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_fr.properties
+++ b/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_fr.properties
@@ -138,8 +138,12 @@ Handler_backup_error_title=Backup was not succesfull
 Handler_backup_config_error=An Error occured while trying to write a local backup of classification configurations.
 Command_update_error=Update unsuccessfull
 Command_update_error_invalid_url=No valid Repository URL found.
+Command_update_error_server=Update failed. No Connection to Remote Server\!
 Command_update_successful=Update successfull
 Command_number_of_persons=Number of persons currently stored in the local database
+Command_update_status_ok=Update went without problems.
+Command_update_status_warn=Update encountered warnings\!
+Command_update_status_error=Update encountered one or more errors\!
 Command_empty_db_requiered=You have to create an empty Database before you can modify your Repository connection.
 Command_modify_repository_connection=Modify Repository Connection
 Command_backup_and_empty=Backup Data and Create an empty Database
@@ -149,6 +153,10 @@ Handler_empty_db_error_title=Creation was not succesfull
 Handler_empty_db_warning=Delete all Data from DB and create a clean empty Database
 Handler_empty_db_warning2=If you click YES you will first write a local backup of all data currently stored in your Database.
 Handler_empty_db_title=Create Empty Database
+
+Conflict_keep_remote=Keep remote version
+Conflict_resolve_later=Resolve later
+Conflict_keep_local=Keep local version
 
 ########################### control #################################
 Orderer_uncategorized=uncategorized
