--- a/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_it.properties
+++ b/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_it.properties
@@ -140,16 +140,24 @@ Handler_backup_config_error=Si è verificato un errore durante la creazione del b
 Command_update_error=Aggiornamento effettuato
 Command_update_error_invalid_url=L\u2018url del repository non è valido
 Command_update_successful=Aggiornamento effettuato
-Command_number_of_persons=Numero delle persone nella database
-Command_empty_db_requiered=Deve creare un database vuota prima di modificare la connessione al repository.
+Command_update_error_server=Update failed. No Connection to Remote Server\!
+Command_update_status_ok=Update went without problems.
+Command_update_status_warn=Update encountered warnings\!
+Command_update_status_error=Update encountered one or more errors\!
 Command_modify_repository_connection=Modificare connessione repository
 Command_backup_and_empty=Backup dati e crea database vuoto
+Command_number_of_persons=Numero delle persone nella database
+Command_empty_db_requiered=Deve creare un database vuota prima di modificare la connessione al repository.
 Handler_empty_db_successful=Creazione del nuovo database effettuata
 Handler_empty_db_error=Si è verificato un errore durante la creazione di un nuovo database
 Handler_empty_db_error_title=Creazione non effettuata
 Handler_empty_db_warning=Cancella tutti i dati dal database e crea database vuota
 Handler_empty_db_warning2=Se clicca \u201ASí\u2018, il programma salverà un backup locale di tutti i dati salvati nel database.
 Handler_empty_db_title=Crea database vuota
+
+Conflict_keep_remote=Keep remote version
+Conflict_resolve_later=Resolve later
+Conflict_keep_local=Keep local version
 
 ########################### control #################################
 Orderer_uncategorized=Non classificato
