fix name and category of new aspect command in view.main

--- a/org.bbaw.pdr.ae.view.main.main/plugin_en.properties
+++ b/org.bbaw.pdr.ae.view.main.main/plugin_en.properties
@@ -53,7 +53,7 @@ property.aboutText=The PDR ArchiveEditor is based on the first Version of the Ar
 command.label.64=Quick New Person
 command.name.42=QuickNewPerson
 command.label.63=Report Errors...
-command.name.41=AddNewAspect
+command.name.41=New Aspect
 menu.label=File
 command.label.62=Install new Software...
 command.name.40=WriteConfigBackup
