login dialog: change text of confirm button

--- a/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_de.properties
+++ b/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_de.properties
@@ -224,7 +224,7 @@ Dialog_MUSICI=MUSICI
 Dialog_del=X
 Dialog_user_project=Vorhaben
 Dialog_fuzzy=unscharf
-LoginDialog_save=
+LoginDialog_save=Anmelden
 Dialog_message_username_no_whitespace=Der Benutzername darf keine Leerzeichen enthalten
 Dialog_reference=Quelle
 LoginDialog_errorMessagePasswordInvalid=Das Passwort ist ung\u00FCltig\!
