--- a/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_en.properties
+++ b/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_en.properties
@@ -221,7 +221,7 @@ Dialog_MUSICI=MUSICI
 Dialog_del=Del
 Dialog_user_project=Project\:
 Dialog_fuzzy=Fuzzy
-LoginDialog_save=Save
+LoginDialog_save=Login
 Dialog_message_username_no_whitespace=Username may not contain whitespace
 Dialog_reference=Reference
 LoginDialog_errorMessagePasswordInvalid=Password is not valid\!
