--- a/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_it.properties
+++ b/org.bbaw.pdr.ae.common.nl1/src/org/bbaw/pdr/ae/common/nl/messages_it.properties
@@ -221,7 +221,7 @@ Dialog_MUSICI=MUSICI
 Dialog_del=Can.
 Dialog_user_project=Progetto\:
 Dialog_fuzzy=Impreciso
-LoginDialog_save=Salva
+LoginDialog_save=Login
 Dialog_message_username_no_whitespace=Il nome utente non deve contenere nessuno spazio vuoto
 Dialog_reference=Fonte
 LoginDialog_errorMessagePasswordInvalid=Password non corretto.
